[tool.poetry]
name = "code-review-bot"
version = "1.0.0"
description = "AI-assisted code review bot for GitHub"
authors = ["Ihor Vovk"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
httpx = "^0.28.1"
python-multipart = "0.0.22"
openai = "^2.8.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
